# fcp-sheets

./: .mcp.json  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
docs/benchmark/: README.md  v2-fcp-result.xlsx  v2-raw-result.xlsx
src/fcp_sheets/: adapter.py  main.py
src/fcp_sheets/server/: formatter.py  ops_cells.py  ops_charts.py  ops_cond_fmt.py  ops_sheets.py  ops_structure.py  ops_style.py  ops_tables.py  ops_validate.py  queries.py  reference_card.py  resolvers.py  verb_registry.py
tests/: test_adapter.py  test_ops_cells.py  test_ops_charts.py  test_ops_cond_fmt.py  test_ops_sheets.py  test_ops_structure.py  test_ops_style.py  test_ops_tables.py  test_ops_validate.py  test_queries.py  test_selectors.py  test_smoke.py
